improving metric service and removing dead code
